feat: update image example component and add popup

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     ga('create', 'UA-118898214-1');
   </script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SAIA Perfect Fit</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
