feat: add changes for mtm widget

--- a/src/demo.html
+++ b/src/demo.html
@@ -9,6 +9,6 @@
 <body>
   Demo page
   <div class="saia-widget-container"></div>
-  <script src="saia-pf-shopify.js"></script>
+  <script id="saia-mtm-integration" async src="/integration.js" data-api-key="31146d0e3da5ba6f2133f70f2b9a795285492e25"></script>
 </body>
 </html>
