--- a/src/demo.html
+++ b/src/demo.html
@@ -9,6 +9,6 @@
 <body>
   Demo page
   <div class="saia-widget-container"></div>
-  <script id="saia-mtm-integration" async src="/integration.js" data-api-key="31146d0e3da5ba6f2133f70f2b9a795285492e25"></script>
+  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="Njg2:1jvJd6:JbcnuhaI7pGaYU0L8673zsFvCUY"></script>
 </body>
 </html>
