improvement: change public key to alpha

--- a/src/demo.html
+++ b/src/demo.html
@@ -9,6 +9,9 @@
 <body>
   Demo page
   <div class="saia-widget-container"></div>
-  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="Njg2:1jvJd6:JbcnuhaI7pGaYU0L8673zsFvCUY"></script>
+<!--  alpha-->
+  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="MTQ1:1kHnHw:HJ50OjzJq9rgxyX-8eCen1TGLn"></script>
+<!--  saia-test-->
+<!--  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="Njg2:1jvJd6:JbcnuhaI7pGaYU0L8673zsFvCUY"></script>-->
 </body>
 </html>
