refactor: add PolicyAgreement component

--- a/src/demo.html
+++ b/src/demo.html
@@ -10,9 +10,9 @@
   Demo page
   <div class="saia-widget-container"></div>
 <!--  alpha-->
-  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="MTQ1:1kHnHw:HJ50OjzJq9rgxyX-8eCen1TGLnk"></script>
+<!--  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="MTQ1:1kHnHw:HJ50OjzJq9rgxyX-8eCen1TGLnk"></script>-->
 <!--  saia-test-->
-<!--  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="Njg2:1jvJd6:JbcnuhaI7pGaYU0L8673zsFvCUY"></script>-->
+  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="Njg2:1jvJd6:JbcnuhaI7pGaYU0L8673zsFvCUY"></script>
   <script>
     window.MTM_WIDGET_OPTIONS = {
       defaultValues: {
