--- a/src/demo.html
+++ b/src/demo.html
@@ -21,6 +21,9 @@
         weight: 80,
         email: 'pisa@gmail.com',
       },
+      disableInput: {
+        email: true
+      },
       onMeasurementsReady: (measurements) => {
         console.log(measurements);
       },
