feat: add email screen disable custom option

--- a/src/demo.html
+++ b/src/demo.html
@@ -21,9 +21,12 @@
         weight: 80,
         email: 'pisa@gmail.com',
       },
-      disableInput: {
-        email: true
-      },
+      // disableInput: {
+      //   email: true
+      // },
+      // disableScreen: {
+      //   email: true
+      // },
       onMeasurementsReady: (measurements) => {
         console.log(measurements);
       },
