--- a/src/demo.html
+++ b/src/demo.html
@@ -10,9 +10,9 @@
   Demo page
   <div class="saia-widget-container"></div>
   <!--  alpha-->
-  <!--  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="MTQ1:1kHnHw:HJ50OjzJq9rgxyX-8eCen1TGLnk"></script>-->
+  <!--  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="MTQ1:1kHnHw:HJ50OjzJq9rgxyX-8"></script>-->
   <!--  saia-test-->
-  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="NjI2NQ:1rBDj7:jta2ISV5q1ugWyElt1XIsI0scEc"></script>
+  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="NjI2NQ:1rBDj7:jta2ISV5q1uElt1XIsI0"></script>
   <script>
     window.MTM_WIDGET_OPTIONS = {
       defaultValues: {
