feat: node 18 update

--- a/src/demo.html
+++ b/src/demo.html
@@ -12,7 +12,7 @@
   <!--  alpha-->
   <!--  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="MTQ1:1kHnHw:HJ50OjzJq9rgxyX-8"></script>-->
   <!--  saia-test-->
-  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="NjI2NQ:1rBDj7:jta2ISV5q1uElt1XIsI0"></script>
+  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="NjI2NQ:1rp2Us:G1cZmOOqSBHcFSu0Q2LyQrNzK0yCqR2A6tAvaLQ4ubY"></script>
   <script>
     window.MTM_WIDGET_OPTIONS = {
       defaultValues: {
