--- a/src/demo.html
+++ b/src/demo.html
@@ -9,10 +9,8 @@
 <body>
   Demo page
   <div class="saia-widget-container"></div>
-  <!--  alpha-->
-  <!--  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="MTQ1:1kHnHw:HJ50OjzJq9rgxyX-8"></script>-->
-  <!--  saia-test-->
-  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="NjI2NQ:1rp2Us:G1cZmOOqSBHcFSu0Q2LyQrNzK0yCqR2A6tAvaLQ4ubY"></script>
+  <!--set your public key-->
+  <script id="saia-mtm-integration" async src="/integration.js" data-public-key="your public key"></script>
   <script>
     window.MTM_WIDGET_OPTIONS = {
       defaultValues: {
